chore(info): adjust guide page image resource

--- a/_infos/2022-10-06-guide.html
+++ b/_infos/2022-10-06-guide.html
@@ -22,7 +22,7 @@ image:
     <div class="text-center">
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_1_1.png %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_1_1.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>出七十二快速道路後往右轉經大湖上山(較建議路段)</p>
@@ -30,7 +30,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_1_2.png %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_1_2.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>看到大湖國中右轉苗栗六十一號縣道 (細細邦道)</p>
@@ -38,7 +38,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_1_3.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_1_3.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>沿途經過此岔路請繼續直行</p>
@@ -46,7 +46,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_1_4.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_1_4.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>沿途經過此岔路請繼續直行，沿著主要幹道開</p>
@@ -54,7 +54,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_1_5.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_1_5.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>沿途經過小小的大安橋</p>
@@ -62,7 +62,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_1_6.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_1_6.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>經過下圖路口時，請注意不要錯過，左轉上坡後路就變大條了!!</p>
@@ -72,7 +72,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_1_6.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_1_6.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>沿途經過此小岔路，右轉上坡  請繼續沿著主要幹道開</p>
@@ -80,7 +80,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_1_7.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_1_7.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>沿途經過此小岔路，右轉上坡  請繼續沿著主要幹道開</p>
@@ -88,7 +88,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_1_8.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_1_8.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>上坡後經泰安國中小</p>
@@ -96,7 +96,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_1_9.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_1_9.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>看到大興派出所路口右轉</p>
@@ -104,7 +104,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_1_10.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_1_10.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>經過派出所後，皆一直直行，走最大條的路(平緩沒有上下坡)</p>
@@ -112,7 +112,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_1_11.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_1_11.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>沿途經過此岔路請繼續直行，沿著主要幹道開</p>
@@ -120,7 +120,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_1_12.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_1_12.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>&#127775; 抵達密式入口 &#127775;</p>
@@ -138,7 +138,7 @@ image:
     <div class="text-center">
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_1.png %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_1.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>出七十二快速道路後直行經清安苗62-1上山</p>
@@ -146,7 +146,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_2.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_2.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>72快速道路走到底汶水端</p>
@@ -154,7 +154,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_3.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_3.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>直行走往清安方向</p>
@@ -162,7 +162,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_4.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_4.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>左轉往清安方向</p>
@@ -170,7 +170,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_5.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_5.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>岔路往左經萊爾富至豆腐街</p>
@@ -178,7 +178,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_6.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_6.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>至溫泉區路口右轉走苗62-1</p>
@@ -186,7 +186,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_7.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_7.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>右轉親善橋</p>
@@ -194,7 +194,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_8.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_8.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>經過下圖路口時，請注意不要錯過，請右轉上坡!!</p>
@@ -204,7 +204,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_9.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_9.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>行至三岔路口直走往大興南灣方向</p>
@@ -212,7 +212,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_10.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_10.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>此路口右轉往大興方向</p>
@@ -220,7 +220,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_11.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_11.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>沿著柏油路直行</p>
@@ -228,7 +228,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_12.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_12.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>直行經過大興派出所</p>
@@ -236,7 +236,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_13.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_13.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>沿著南清聯絡道路直行</p>
@@ -244,7 +244,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_14.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_14.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>沿著柏油路直行</p>
@@ -252,7 +252,7 @@ image:
       </div>
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
-          <span class="image fit"><img src="{% link assets/images/guide_2_15.jpeg %}" alt=""></span>
+          <span class="image fit"><img src="{% link assets/images/guide/guide_2_15.jpg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
           <p>&#127775; 抵達密式入口 &#127775;</p>
