--- a/sale_items.html
+++ b/sale_items.html
@@ -119,7 +119,7 @@ order: 2
                     <h4 class="red">數量有限，且寢具搬運困難無現場提供如需租用請提前告知</h4>
                     <div class="row align-items-center">
                       <div class="col-12 col-md-8">
-                        <span class="image fit"><img src="{% link assets/images/sale_items/sale_items_1.jpeg %}" alt=""></span>
+                        <span class="image fit"><img src="{% link assets/images/sale_items/sale_items_1.jpg %}" alt=""></span>
                       </div>
                       <div class="col-12 col-md-4">
                         <p>寢具組內容如圖</br>觀山之屋及靜房、默房都僅能放一組、沉房可放兩組</p>
@@ -135,7 +135,7 @@ order: 2
                     </div>
                     <div class="row align-items-center">
                       <div class="col-12 col-md-8">
-                        <span class="image fit"><img src="{% link assets/images/sale_items/sale_items_3.jpeg %}" alt=""></span>
+                        <span class="image fit"><img src="{% link assets/images/sale_items/sale_items_3.jpg %}" alt=""></span>
                       </div>
                       <div class="col-12 col-md-4">
                         <p>沉房放兩組示意圖</p>
@@ -156,7 +156,7 @@ order: 2
                 <h4>密式桌遊咖啡廳同時販售簡單雜貨</h4>
                 <div class="row align-items-center">
                   <div class="col-12 col-md-8">
-                    <span class="image fit"><img src="{% link assets/images/sale_items/sale_items_4.jpeg %}" alt=""></span>
+                    <span class="image fit"><img src="{% link assets/images/sale_items/sale_items_4.jpg %}" alt=""></span>
                   </div>
                   <div class="col-12 col-md-4">
                     <p>密式柑仔店採自助販賣</br>如有需要可隨時自行拿取並自行將費用投至存錢筒即可</p>
@@ -176,7 +176,7 @@ order: 2
                 <div class="modal-body">
                   <div class="row align-items-center">
                     <div class="col-12">
-                      <span class="image fit"><img src="{% link assets/images/sale_items/sale_items_5.jpeg %}" alt=""></span>
+                      <span class="image fit"><img src="{% link assets/images/sale_items/sale_items_5.jpg %}" alt=""></span>
                     </div>
                   </div>
                   <div class="text-center">
@@ -195,7 +195,7 @@ order: 2
                     <li>無提供菜單上沒有的食材</li>
                     <div class="row align-items-center my-3">
                       <div class="col-12 col-md-8">
-                        <span class="image fit"><img src="{% link assets/images/sale_items/sale_items_6.png %}" alt=""></span>
+                        <span class="image fit"><img src="{% link assets/images/sale_items/sale_items_6.jpg %}" alt=""></span>
                       </div>
                       <div class="col-12 col-md-4">
                         <p>業者提供的烤肉架為免洗式很低的烤肉架，密式一律禁止使用，請自備架高 60 cm以上烤肉架或另跟密式租用</p>
