chore(announcement): adjust post

--- a/_announcements/2022-10-09-website.html
+++ b/_announcements/2022-10-09-website.html
@@ -5,7 +5,7 @@ title: 密式新版官網上線！
 datetime: "2022 Oct 9"
 description: "由老板親自操刀設計、編寫的官方網站即將於近日上線！"
 tags: ["公告", "網站"]
-image: https://drive.google.com/uc?id=1rdmJdMuwbcBxCYrwJyJ5PpjGBAjtKGpl
+image: assets/images/announcements/website/website.jpg
 ---
 
 <h3>密式旅行官網初次亮相</h3>
