chore(guide): fix guide html

--- a/_infos/2022-10-06-guide.html
+++ b/_infos/2022-10-06-guide.html
@@ -7,11 +7,11 @@ image:
 ---
 <div class="container">
   <div class="row align-items-center" style="min-height: 500px">
-    <div class="col-6 text-center">
-      <button type="button" class="button special" data-toggle="modal" data-target="#guide_1" data-whatever="@guide_1" style="font-size: 28px;">經大湖市區</button>
+    <div class="col-12 col-lg-6 text-center">
+      <button type="button" class="button special big" data-toggle="modal" data-target="#guide_1" data-whatever="@guide_1">經大湖市區</button>
     </div>
-    <div class="col-6 text-center">
-      <button type="button" class="button" data-toggle="modal" data-target="#guide_2" data-whatever="@guide_2" style="font-size: 28px;">經豆腐街</button>
+    <div class="col-12 col-lg-6 text-center">
+      <button type="button" class="button big" data-toggle="modal" data-target="#guide_2" data-whatever="@guide_2">經豆腐街</button>
     </div>
   </div>
 </div>
