chore(set_menu): fix set_menu html

--- a/_infos/2022-10-06-set-menu-info.html
+++ b/_infos/2022-10-06-set-menu-info.html
@@ -20,41 +20,41 @@ image:
 
 <div class="container">
   <div class="row align-items-center" style="min-height: 500px">
-    <div class="col-6 text-center">
-      <button type="button" class="button special" data-toggle="modal" data-target="#set-ment-1" data-whatever="@set-ment-1" style="font-size: 24px;">家庭合菜</button>
+    <div class="col-12 col-lg-6 text-center">
+      <button type="button" class="button big special" data-toggle="modal" data-target="#set-ment-1" data-whatever="@set-ment-1">家庭合菜</button>
     </div>
-    <div class="col-6 text-center">
-      <button type="button" class="button" data-toggle="modal" data-target="#set-ment-2" data-whatever="@set-ment-2" style="font-size: 24px;">經濟合菜</button>
+    <div class="col-12 col-lg-6 text-center">
+      <button type="button" class="button big" data-toggle="modal" data-target="#set-ment-2" data-whatever="@set-ment-2">經濟合菜</button>
     </div>
-    <div class="col-6 text-center">
-      <button type="button" class="button" data-toggle="modal" data-target="#set-ment-3" data-whatever="@set-ment-3" style="font-size: 24px;">精緻合菜</button>
+    <div class="col-12 col-lg-6 text-center">
+      <button type="button" class="button big" data-toggle="modal" data-target="#set-ment-3" data-whatever="@set-ment-3">精緻合菜</button>
     </div>
-    <div class="col-6 text-center">
-      <button type="button" class="button special" data-toggle="modal" data-target="#set-ment-4" data-whatever="@set-ment-4" style="font-size: 24px;">海陸合菜</button>
+    <div class="col-12 col-lg-6 text-center">
+      <button type="button" class="button big special" data-toggle="modal" data-target="#set-ment-4" data-whatever="@set-ment-4">海陸合菜</button>
     </div>
   </div>
 </div>
 
 <div class="modal fade mt-5" id="set-ment-1" role="dialog" aria-labelledby="set-ment-1ModalLabel">
-  <div class="modal-dialog text-center" role="document" style="max-width: 960px;">
-    <span class="image"><img src="{% link assets/images/set_menu_1.jpg %}" alt="" style="min-width: 600px"></span>
+  <div class="modal-dialog text-center modal-container" role="document" style="max-width: 960px;">
+    <span class="image"><img src="{% link assets/images/set_menu_1.jpg %}" alt=""></span>
   </div>
 </div>
 
 <div class="modal fade mt-5" id="set-ment-2" role="dialog" aria-labelledby="set-ment-2ModalLabel">
-  <div class="modal-dialog text-center" role="document" style="max-width: 960px;">
-    <span class="image"><img src="{% link assets/images/set_menu_2.jpg %}" alt="" style="min-width: 600px"></span>
+  <div class="modal-dialog text-center modal-container" role="document" style="max-width: 960px;">
+    <span class="image"><img src="{% link assets/images/set_menu_2.jpg %}" alt=""></span>
   </div>
 </div>
 
 <div class="modal fade mt-5" id="set-ment-3" role="dialog" aria-labelledby="set-ment-3ModalLabel">
-  <div class="modal-dialog text-center" role="document" style="max-width: 960px;">
-    <span class="image"><img src="{% link assets/images/set_menu_3.jpg %}" alt="" style="min-width: 600px"></span>
+  <div class="modal-dialog text-center modal-container" role="document" style="max-width: 960px;">
+    <span class="image"><img src="{% link assets/images/set_menu_3.jpg %}" alt=""></span>
   </div>
 </div>
 
 <div class="modal fade mt-5" id="set-ment-4" role="dialog" aria-labelledby="set-ment-4ModalLabel">
-  <div class="modal-dialog text-center" role="document" style="max-width: 960px;">
-    <span class="image"><img src="{% link assets/images/set_menu_4.jpg %}" alt="" style="min-width: 600px"></span>
+  <div class="modal-dialog text-center modal-container" role="document" style="max-width: 960px;">
+    <span class="image"><img src="{% link assets/images/set_menu_4.jpg %}" alt=""></span>
   </div>
 </div>
