chore(info): update page info

--- a/sale_items.html
+++ b/sale_items.html
@@ -60,8 +60,8 @@ order: 2
                   </div>
                   <div class="modal-body">
                     <div class="text-center">
-                      <h4>租用烹飪組合費用：<span class="yellow">200元/天<span></h4>
-                      <h4>單租卡式爐(不含瓦斯)費用：<span class="yellow">50元/天</span></h4>
+                      <h4>租用烹飪組合費用：<span class="yellow">200元/次<span></h4>
+                      <h4>單租卡式爐(不含瓦斯)費用：<span class="yellow">50元/次</span></h4>
                       <h4>烹飪組合提供：</h4>
                       <li>卡式瓦斯爐</li>
                       <li>瓦斯罐乙罐</li>
@@ -84,8 +84,8 @@ order: 2
                   </div>
                   <div class="modal-body">
                     <div class="text-center">
-                      <h4>租用烤肉組合費用：<span class="yellow">300元/天<span></h4>
-                      <h4>單租烤肉架(不含消耗品、烤網)：<span class="yellow">100元/天</span></h4>
+                      <h4>租用烤肉組合費用：<span class="yellow">300元/次<span></h4>
+                      <h4>單租烤肉架(不含消耗品、烤網)：<span class="yellow">100元/次</span></h4>
                       <h4 class="red">本組合不含噴燈，如有需要請自備</h4>
                       <h4 class="red">如木炭、烤網等備品不足，可以另再跟密式加購</h4>
                       <h4>烤肉組合包含：</h4>
@@ -113,10 +113,10 @@ order: 2
                     <div class="text-center">
                       <h4>雙人一組，日式記憶雙人床墊、兩顆枕頭、一條雙人被</h4>
                       <h4>床墊的尺寸為標準雙人床大小 5 尺x 6.2 尺 (約為 152 公分 x 188 公分)</h4>
-                      <h4>租用寢具組合費用：<span class="yellow">300 元/天</span></h4>
-                      <h4>單租床墊費用：<span class="yellow">100 元/天</span></h4>
-                      <h4>單租棉被費用：<span class="yellow">100 元/天</span></h4>
-                      <h4>單租枕頭費用：<span class="yellow">50 元/天</span></h4>
+                      <h4>租用寢具組合費用：<span class="yellow">300 元/次</span></h4>
+                      <h4>單租床墊費用：<span class="yellow">100 元/次</span></h4>
+                      <h4>單租棉被費用：<span class="yellow">100 元/次</span></h4>
+                      <h4>單租枕頭費用：<span class="yellow">50 元/次</span></h4>
                       <h4 class="red">數量有限，且寢具搬運困難無現場提供如需租用請提前告知</h4>
                       <div class="row align-items-center">
                         <div class="col-12 col-md-8">
