--- a/sale_items.html
+++ b/sale_items.html
@@ -41,13 +41,16 @@ order: 2
                   <button type="button" class="button font-md" data-toggle="modal" data-target="#sale_item_4" data-whatever="@sale_item_4">各式雜貨</button>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center p-2">
-                  <button type="button" class="button special font-md" data-toggle="modal" data-target="#sale_item_5" data-whatever="@sale_item_5">代訂食材</button>
+                  <button type="button" class="button special font-md" data-toggle="modal" data-target="#sale_item_6" data-whatever="@sale_item_6">代訂合菜</button>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 text-center p-2">
-                  <button type="button" class="button font-md" data-toggle="modal" data-target="#sale_item_6" data-whatever="@sale_item_6">代訂合菜</button>
+                  <button type="button" class="button font-md" data-toggle="modal" data-target="#sale_item_7" data-whatever="@sale_item_7">簡餐菜單</button>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center p-2">
-                  <button type="button" class="button special font-md" data-toggle="modal" data-target="#sale_item_7" data-whatever="@sale_item_7">簡餐菜單</button>
+                <div class="col-12 col-md-6 text-center p-2">
+                  <button type="button" class="button special font-md" data-toggle="modal" data-target="#sale_item_5" data-whatever="@sale_item_5">代訂食材/烤樂美</button>
+                </div>
+                <div class="col-12 col-md-6 text-center p-2">
+                  <button type="button" class="button font-md" data-toggle="modal" data-target="#sale_item_8" data-whatever="@sale_item_8">代訂食材/紅瓦舍</button>
                 </div>
               </div>
             </div>
@@ -172,7 +175,7 @@ order: 2
               <div class="modal-dialog text-center modal-container" role="document" style="max-width: 960px;">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h1>代訂食材</h1>
+                    <h1>代訂食材/烤樂美</h1>
                   </div>
                   <div class="modal-body">
                     <div class="row align-items-center">
@@ -182,16 +185,16 @@ order: 2
                     </div>
                     <div class="text-center">
                       <div>
-                        <a href="https://ez8bq.com.tw/" class="button special big mb-5">前往烤美樂烤肉網</a>
+                        <a href="https://ez8bq.com.tw/" class="button special big mb-5">前往烤樂美烤肉網</a>
                       </div>
-                      <h4>密式協助旅客與烤美樂烤肉網代訂食材</h4>
+                      <h4>密式協助旅客與烤樂美烤肉網代訂食材</h4>
                       <h4 class="yellow">密式幫你訂食材一律 95 折</h4>
-                      <h4 class="yellow">代訂不限金額免運【依業者公告為主】</h4>
+                      <h4 class="yellow">代訂折扣後金額達 2500 以上免運費</h4>
                       <h4 class="yellow">山區配送時程較長，如需預訂請"提前一週"來訊告知並完成匯款動作</h4>
-                      <h4>可選擇自行至烤美樂網站預訂下訂單或是請密式代為訂購</h4>
+                      <h4>可選擇自行至烤樂美網站預訂下訂單或是請密式代為訂購</h4>
                       <li class="red">須由密式代為訂購才有 95 折優惠</li>
                       <li class="red">預訂後須完成匯款才算預訂完成</li>
-                      <li>食材皆由烤肉業者-烤美樂提供，免運金額和套餐內容依烤肉業者公告為主</li>
+                      <li>食材皆由烤肉業者-烤樂美提供，套餐內容依烤肉業者公告為主</li>
                       <li>密式僅提供代訂、代收、代冰服務</li>
                       <li>無提供菜單上沒有的食材</li>
                       <div class="row align-items-center my-3">
@@ -245,6 +248,70 @@ order: 2
                       <p>餐點囊括：咖啡、茶類、炸物、厚片</p>
                       <div class="my-3">
                         <a href="{{ site.base_url }}/{{ site.menu_url }}" class="button">查看菜單</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="modal fade mt-5" id="sale_item_8" role="dialog" aria-labelledby="sale_item_8ModalLabel">
+              <div class="modal-dialog text-center modal-container" role="document" style="max-width: 960px;">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1>代訂食材/紅瓦舍</h1>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row align-items-center">
+                      <div class="col-lg-2"></div>
+                      <div class="col-12 col-lg-8">
+                        <div id="carouselExampleIndicators" class="carousel slide item-carousel" data-ride="carousel">
+                          <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                          </ol>
+                          <div class="carousel-inner">
+                            <div class="carousel-item active">
+                              <img class="d-block w-100" src="{% link assets/images/sale_items/sale_items_7.jpg %}">
+                            </div>
+                            <div class="carousel-item">
+                              <img class="d-block w-100" src="{% link assets/images/sale_items/sale_items_8.jpg %}">
+                            </div>
+                            <div class="carousel-item">
+                              <img class="d-block w-100" src="{% link assets/images/sale_items/sale_items_9.jpg %}">
+                            </div>
+                          </div>
+                          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                          </a>
+                        </div>
+                      </div>
+                      <div class="col-lg-2"></div>
+                    </div>
+                    <div class="text-center">
+                      <h4>密式協助旅客與紅瓦舍烤肉網代訂食材</h4>
+                      <h4 class="yellow">密式幫你訂食材一律 95 折</h4>
+                      <h4 class="yellow">代訂折扣後價格達 2000 元免運費</h4>
+                      <h4 class="yellow">山區配送時程較長，如需預訂請"提前一週"來訊告知並完成匯款動作</h4>
+                      <h4>可選擇自行至紅瓦舍網站預訂下訂單或是請密式代為訂購</h4>
+                      <li class="red">須由密式代為訂購才有 95 折優惠</li>
+                      <li class="red">預訂後須完成匯款才算預訂完成</li>
+                      <li>食材皆由烤肉業者-紅瓦舍提供，套餐內容依烤肉業者公告為主</li>
+                      <li>密式僅提供代訂、代收、代冰服務</li>
+                      <li>無提供菜單上沒有的食材</li>
+                      <div class="row align-items-center my-3">
+                        <div class="col-12 col-md-8">
+                          <span class="image fit"><img src="{% link assets/images/sale_items/sale_items_6.jpg %}" alt=""></span>
+                        </div>
+                        <div class="col-12 col-md-4">
+                          <p>業者提供的烤肉架為免洗式很低的烤肉架，密式一律禁止使用，請自備架高 60 cm以上烤肉架或另跟密式租用</p>
+                        </div>
                       </div>
                     </div>
                   </div>
