--- a/sale_items.html
+++ b/sale_items.html
@@ -179,19 +179,38 @@ order: 2
                   </div>
                   <div class="modal-body">
                     <div class="row align-items-center">
-                      <div class="col-12">
-                        <span class="image fit"><img src="{% link assets/images/sale_items/sale_items_5.jpg %}" alt=""></span>
+                      <div class="col-lg-2"></div>
+                      <div class="col-12 col-lg-8">
+                        <div id="carouselExampleIndicators_1" class="carousel slide item-carousel" data-ride="carousel">
+                          <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators_1" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators_1" data-slide-to="1"></li>
+                          </ol>
+                          <div class="carousel-inner">
+                            <div class="carousel-item active">
+                              <img class="d-block w-100" src="{% link assets/images/sale_items/sale_items_10.jpg %}">
+                            </div>
+                            <div class="carousel-item">
+                              <img class="d-block w-100" src="{% link assets/images/sale_items/sale_items_11.jpg %}">
+                            </div>
+                          </div>
+                          <a class="carousel-control-prev" href="#carouselExampleIndicators_1" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a class="carousel-control-next" href="#carouselExampleIndicators_1" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                          </a>
+                        </div>
                       </div>
+                      <div class="col-lg-2"></div>
                     </div>
                     <div class="text-center">
-                      <div>
-                        <a href="https://ez8bq.com.tw/" class="button special big mb-5">前往烤樂美烤肉網</a>
-                      </div>
                       <h4>密式協助旅客與烤樂美烤肉網代訂食材</h4>
                       <h4 class="yellow">密式幫你訂食材一律 95 折</h4>
                       <h4 class="yellow">代訂折扣後金額達 2500 以上免運費</h4>
                       <h4 class="yellow">山區配送時程較長，如需預訂請"提前一週"來訊告知並完成匯款動作</h4>
-                      <h4>可選擇自行至烤樂美網站預訂下訂單或是請密式代為訂購</h4>
                       <li class="red">須由密式代為訂購才有 95 折優惠</li>
                       <li class="red">預訂後須完成匯款才算預訂完成</li>
                       <li>食材皆由烤肉業者-烤樂美提供，套餐內容依烤肉業者公告為主</li>
@@ -298,10 +317,8 @@ order: 2
                       <h4>密式協助旅客與紅瓦舍烤肉網代訂食材</h4>
                       <h4 class="yellow">密式幫你訂食材一律 95 折</h4>
                       <h4 class="yellow">代訂折扣後價格達 2000 元免運費</h4>
-                      <h4 class="yellow">山區配送時程較長，如需預訂請"提前一週"來訊告知並完成匯款動作</h4>
-                      <h4>可選擇自行至紅瓦舍網站預訂下訂單或是請密式代為訂購</h4>
+                      <h4 class="yellow">山區配送時程較長，如需預訂請"提前一週"來訊告知</h4>
                       <li class="red">須由密式代為訂購才有 95 折優惠</li>
-                      <li class="red">預訂後須完成匯款才算預訂完成</li>
                       <li>食材皆由烤肉業者-紅瓦舍提供，套餐內容依烤肉業者公告為主</li>
                       <li>密式僅提供代訂、代收、代冰服務</li>
                       <li>無提供菜單上沒有的食材</li>
