Adjust sale_items page price

--- a/sale_items.html
+++ b/sale_items.html
@@ -114,11 +114,12 @@ order: 2
                   </div>
                   <div class="modal-body">
                     <div class="text-center">
+                      <h4 class="red">2024/06/01 前的訂單為 300 元/次</h4>
                       <h4>雙人一組，日式記憶雙人床墊、兩顆枕頭、一條雙人被</h4>
                       <h4>床墊的尺寸為標準雙人床大小 5 尺x 6.2 尺 (約為 152 公分 x 188 公分)</h4>
-                      <h4>租用寢具組合費用：<span class="yellow">300 元/次</span></h4>
-                      <h4>單租床墊費用：<span class="yellow">100 元/次</span></h4>
-                      <h4>單租棉被費用：<span class="yellow">100 元/次</span></h4>
+                      <h4>租用寢具組合費用：<span class="yellow">400 元/次</span></h4>
+                      <h4>單租床墊費用：<span class="yellow">150 元/次</span></h4>
+                      <h4>單租棉被費用：<span class="yellow">150 元/次</span></h4>
                       <h4>單租枕頭費用：<span class="yellow">50 元/次</span></h4>
                       <h4 class="red">數量有限，且寢具搬運困難無現場提供如需租用請提前告知</h4>
                       <div class="row align-items-center">
