Update sale_items page

--- a/sale_items.html
+++ b/sale_items.html
@@ -180,8 +180,7 @@ order: 2
                   </div>
                   <div class="modal-body">
                     <div class="row align-items-center">
-                      <div class="col-lg-2"></div>
-                      <div class="col-12 col-lg-8">
+                      <div class="col-12">
                         <div id="carouselExampleIndicators_1" class="carousel slide item-carousel" data-ride="carousel">
                           <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators_1" data-slide-to="0" class="active"></li>
@@ -205,7 +204,6 @@ order: 2
                           </a>
                         </div>
                       </div>
-                      <div class="col-lg-2"></div>
                     </div>
                     <div class="text-center">
                       <h4>密式協助旅客與烤樂美烤肉網代訂食材</h4>
@@ -283,8 +281,7 @@ order: 2
                   </div>
                   <div class="modal-body">
                     <div class="row align-items-center">
-                      <div class="col-lg-2"></div>
-                      <div class="col-12 col-lg-8">
+                      <div class="col-12">
                         <div id="carouselExampleIndicators" class="carousel slide item-carousel" data-ride="carousel">
                           <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -303,16 +300,15 @@ order: 2
                             </div>
                           </div>
                           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="carousel-control-prev-icon"></span>
                             <span class="sr-only">Previous</span>
                           </a>
                           <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="carousel-control-next-icon"></span>
                             <span class="sr-only">Next</span>
                           </a>
                         </div>
                       </div>
-                      <div class="col-lg-2"></div>
                     </div>
                     <div class="text-center">
                       <h4>密式協助旅客與紅瓦舍烤肉網代訂食材</h4>
