Update account page

--- a/_infos/2022-10-06-set-menu-info.html
+++ b/_infos/2022-10-06-set-menu-info.html
@@ -13,7 +13,7 @@ image:
     <li>每桌需另加２００元清潔費</li>
     <li>小朋友餐具需自備，餐廳提供的餐具皆為瓷碗瓷盤</li>
     <li>如需預訂請"提前"來電告知</li>
-    <li>菜色皆由公館鄉上來客饌製作，密式提供餐點運送、用餐環境</li>
+    <li>菜色皆由公館鄕上來客饌製作，密式提供餐點運送、用餐環境</li>
     <li>無提供菜單上沒有的餐點</li>
   </ul>
 </div>
