--- a/sale_items.html
+++ b/sale_items.html
@@ -47,10 +47,7 @@ order: 2
                   <button type="button" class="button font-md" data-toggle="modal" data-target="#sale_item_7" data-whatever="@sale_item_7">簡餐菜單</button>
                 </div>
                 <div class="col-12 col-md-6 text-center p-2">
-                  <button type="button" class="button special font-md" data-toggle="modal" data-target="#sale_item_5" data-whatever="@sale_item_5">代訂食材/烤樂美</button>
-                </div>
-                <div class="col-12 col-md-6 text-center p-2">
-                  <button type="button" class="button font-md" data-toggle="modal" data-target="#sale_item_8" data-whatever="@sale_item_8">代訂食材/紅瓦舍</button>
+                  <button type="button" class="button special font-md" data-toggle="modal" data-target="#sale_item_8" data-whatever="@sale_item_8">代訂食材/紅瓦舍</button>
                 </div>
               </div>
             </div>
@@ -167,63 +164,6 @@ order: 2
                     </div>
                   </div>
                   <p>可能包含以下品項：瓦斯罐、木炭、烤肉網、牙刷、飲料、飲用水、零食、拖鞋、泡麵、日用品雜貨</p>
-                </div>
-              </div>
-            </div>
-  
-            <div class="modal fade mt-5" id="sale_item_5" role="dialog" aria-labelledby="sale_item_5ModalLabel">
-              <div class="modal-dialog text-center modal-container" role="document" style="max-width: 960px;">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h1>代訂食材/烤樂美</h1>
-                  </div>
-                  <div class="modal-body">
-                    <div class="row align-items-center">
-                      <div class="col-12">
-                        <div id="carouselExampleIndicators_1" class="carousel slide item-carousel" data-ride="carousel">
-                          <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators_1" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators_1" data-slide-to="1"></li>
-                          </ol>
-                          <div class="carousel-inner">
-                            <div class="carousel-item active">
-                              <img class="d-block w-100" src="{% link assets/images/sale_items/sale_items_10.jpg %}">
-                            </div>
-                            <div class="carousel-item">
-                              <img class="d-block w-100" src="{% link assets/images/sale_items/sale_items_11.jpg %}">
-                            </div>
-                          </div>
-                          <a class="carousel-control-prev" href="#carouselExampleIndicators_1" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                          </a>
-                          <a class="carousel-control-next" href="#carouselExampleIndicators_1" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="text-center">
-                      <h4>密式協助旅客與烤樂美烤肉網代訂食材</h4>
-                      <h4 class="yellow">密式幫你訂食材一律 95 折</h4>
-                      <h4 class="yellow">代訂折扣後金額達 2500 以上免運費</h4>
-                      <h4 class="yellow">山區配送時程較長，如需預訂請"提前一週"來訊告知並完成匯款動作</h4>
-                      <li class="red">須由密式代為訂購才有 95 折優惠</li>
-                      <li class="red">預訂後須完成匯款才算預訂完成</li>
-                      <li>食材皆由烤肉業者-烤樂美提供，套餐內容依烤肉業者公告為主</li>
-                      <li>密式僅提供代訂、代收、代冰服務</li>
-                      <li>無提供菜單上沒有的食材</li>
-                      <div class="row align-items-center my-3">
-                        <div class="col-12 col-md-8">
-                          <span class="image fit"><img src="{% link assets/images/sale_items/sale_items_6.jpg %}" alt=""></span>
-                        </div>
-                        <div class="col-12 col-md-4">
-                          <p>業者提供的烤肉架為免洗式很低的烤肉架，密式一律禁止使用，請自備架高 60 cm以上烤肉架或另跟密式租用</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
