--- a/sale_items.html
+++ b/sale_items.html
@@ -69,6 +69,7 @@ order: 2
                       <li>湯勺一個</li>
                       <li>不鏽鋼餐具四至八人份(含碗、筷子)</li>
                       <li>不鏽鋼盤</li>
+                      <li>切割用小刀、砧板</li>
                       <p></br>如有租用需求</br>請在訂房(位)時事先告知</br></br>請勿於室內炊煮</br>使用後清洗完畢再歸還喔</p>
                     </div>
                   </div>
